# diode-ftp

./: .gitignore  LICENSE  README.md  pyproject.toml
diode_ftp/: FileChunker.py  FileReassembler.py  FolderReceiver.py  FolderSender.py  __init__.py  bitset.py  cli.py  header.py
si_prefix/: _version.py
tests/: common.py  test_file_chunker.py  test_folder_sync.py
